# Retention-Risk-Prediction

./: README.md  catboost.ipynb  emailai.ipynb  index.html  main.py  pyproject.toml  risk_prediction.ipynb  run_app.bat  xgboost.ipynb
css/: styles.css
data/: client_data_5000.csv
js/: app.js
project/agents/: nodes.py
project/enrichment/: company_data.py
project/exception_handler/: exception.py
project/instructor/: instructions.py
project/llm/: planner.py
project/structure/: schema.py
project/system/: graph.py
